arreglados test servicio movimientos